feat: migrate to Spring WebFlux + R2DBC with Java 21 Virtual Threads
Replace the blocking Spring MVC + JPA/Hibernate stack with a fully
non-blocking reactive stack for high-throughput production readiness.

Key changes:
- Spring Boot 3.1.5 → 3.3.6, Java 17 → 21
- spring-boot-starter-web → spring-boot-starter-webflux (Netty)
- spring-boot-starter-data-jpa → spring-boot-starter-data-r2dbc
- H2 and PostgreSQL JDBC drivers replaced with R2DBC drivers
- Virtual threads enabled via spring.threads.virtual.enabled=true
- All service methods return Mono<T> using reactive operators
- Entities migrated to Spring Data R2DBC annotations (no JPA/Hibernate)
- Relationships denormalized to FK strings (no @ManyToOne/@OneToMany)
- Repositories extend ReactiveCrudRepository; pessimistic lock preserved
  via native SQL SELECT...FOR UPDATE in WalletRepository
- R2dbcConfig registers enum converters for WalletStatus, CurrencyType,
  and TransactionType
- R2dbcEntityTemplate.insert() used for new entities to avoid the R2DBC
  save()-as-UPDATE pitfall when @Id is client-generated (UUID)
- SecurityConfig migrated to ServerHttpSecurity / SecurityWebFilterChain
- GlobalExceptionHandler updated for WebFlux (ServerWebExchange)
- schema.sql replaces Hibernate DDL auto; transaction.id changed from
  BIGSERIAL to VARCHAR(36) UUID (client-generated, breaking API change)
- Tests: MockMvc -> WebTestClient, @Transactional cleanup -> reactive
  deleteAll().block(), direct .block() calls in unit/integration tests
- README updated with reactive architecture notes, new stack, new env vars
- All 30 tests pass (14 unit, 9 controller, 7 integration)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>